testdata/golden/sema/valid/concurrency/spawn_async_block.fmt
// Testing task with async blocks

pub async fn test_spawn_async_block() {
    // task async block -> Task<int>
    let t1: Task<int> = task async {
        return 42;
    };
    let result1: TaskResult<int> = t1.await();

    // task async block returning string
    let t2: Task<string> = task async {
        return "hello";
    };
    let result2: TaskResult<string> = t2.await();
}

// task async block from sync function
pub fn sync_fn_spawn_block() -> Task<bool> {
    return task async {
        return true;
    };
}
