testdata/golden/sema/invalid/concurrency/task_multiple_leaks.fmt
// ERROR: Multiple spawn leaks

async fn work() -> int {
    return 42;
}

pub async fn test_multiple_leaks() -> Task<int> {
    let t1 = spawn work();  // OK - awaited
    let t2 = spawn work();  // ERROR SEM3107 - leaked
    let t3 = spawn work();  // OK - returned

    let r = t1.await();
    return t3;
    // t2 leaks here
}
